tests/test_default/bad/conflict.catala_en
## Article

```catala
declaration scope A:
  context x content integer

scope A:
  definition x under condition true consequence equals 1
  definition x under condition true consequence equals 0
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
